<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="HardcodedText"
  >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_marginBottom="1pt"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="right|center"
        android:textColor="@color/black"
        android:textSize="20pt"
        android:inputType="textPersonName"
        android:text="0" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/btnCancel"
                android:text="@string/cancel"
                android:onClick="clearEvent"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/Chocolate"
                android:layout_width="30pt"
                android:background="@drawable/shape"
                ></Button>

            <Button android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/btnAc"
                android:text="@string/ac"
                android:layout_marginRight="1pt"
                android:onClick="clearEvent"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/Chocolate"
                android:layout_width="30pt"
                android:background="@drawable/shape"
                ></Button>
            <Button android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/btnPercent"
                android:text="@string/percent"
                android:layout_marginRight="1pt"
                android:onClick="percentEvent"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/Chocolate"
                android:layout_width="30pt"
                android:background="@drawable/shape"
                ></Button>

            <Button android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/btnDiv"
                android:text="@string/div"
                android:layout_marginRight="1pt"
                android:onClick="operatorEvent"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/Chocolate"
                android:layout_width="30pt"
                android:background="@drawable/shape"
                ></Button>
        </TableRow>
        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/btnSeven"
                android:text="@string/_7"
                android:onClick="numberEvent"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:background="@drawable/shape"
                ></Button>
            <Button android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/btnEight"
                android:text="@string/_8"
                android:layout_marginRight="1pt"
                android:onClick="numberEvent"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:background="@drawable/shape"
                ></Button>
            <Button android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/btnNine"
                android:text="@string/_9"
                android:layout_marginRight="1pt"
                android:onClick="numberEvent"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:background="@drawable/shape"
                ></Button>
            <Button android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/btnMul"
                android:text="@string/mul"
                android:layout_marginRight="1pt"
                android:onClick="operatorEvent"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/Chocolate"
                android:layout_width="30pt"
                android:background="@drawable/shape"
                ></Button>
        </TableRow>
        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/btnFour"
                android:text="@string/_4"
                android:onClick="numberEvent"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:background="@drawable/shape"
                ></Button>
            <Button android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/btnFive"
                android:text="@string/_5"
                android:onClick="numberEvent"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:background="@drawable/shape"
                ></Button>
            <Button android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/btnSix"
                android:text="@string/_6"
                android:onClick="numberEvent"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:background="@drawable/shape"
                ></Button>
            <Button android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/btnMinus"
                android:text="@string/minus"
                android:onClick="operatorEvent"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/Chocolate"
                android:layout_width="30pt"
                android:background="@drawable/shape"
                ></Button>
        </TableRow>
        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/btnOne"
                android:text="@string/_1"
                android:onClick="numberEvent"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:background="@drawable/shape"
                ></Button>
            <Button android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/btnTwo"
                android:text="@string/_2"
                android:layout_marginRight="1pt"
                android:onClick="numberEvent"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:background="@drawable/shape"
                ></Button>
            <Button android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/btnThree"
                android:text="@string/_3"
                android:layout_marginRight="1pt"
                android:onClick="numberEvent"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:background="@drawable/shape"
                ></Button>
            <Button android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/btnPlus"
                android:text="@string/plus"
                android:layout_marginRight="1pt"
                android:onClick="operatorEvent"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/Chocolate"
                android:layout_width="30pt"
                android:background="@drawable/shape"
                ></Button>
        </TableRow>
        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/btnNot"
                android:text="@string/not"
                android:layout_marginRight="1pt"
                android:onClick="numberEvent"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/Chocolate"
                android:layout_width="30pt"
                android:background="@drawable/shape"
                ></Button>
            <Button android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/btnZero"
                android:text="@string/_0"
                android:layout_marginRight="1pt"
                android:onClick="numberEvent"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:background="@drawable/shape"
                ></Button>
            <Button android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/btnPoint"
                android:text="@string/point"
                android:layout_marginRight="1pt"
                android:onClick="numberEvent"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/Chocolate"
                android:layout_width="30pt"
                android:background="@drawable/shape"
                ></Button>
            <Button android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/btnEqual"
                android:text="@string/equal"
                android:onClick="equalEvent"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/Chocolate"
                android:layout_width="30pt"
                android:background="@drawable/shape"
                ></Button>
        </TableRow>

    </TableLayout>
</LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_gravity="start"
        android:theme="@style/MaterialAlertDialog.Material3.Body.Text"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>